--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     font-family: arial;
     font-size: 18px;
+    color: white;
+    
 }
 
 .string{
@@ -12,6 +14,8 @@
 }
 input{
     padding: 8px;
+    background-color: black;
+    border: 1px solid white;
 }
 button#submit_button {
     border: none;
@@ -19,4 +23,72 @@ button#submit_button {
     background-color: red;
     color: white;
     font-weight: 400;
+}
+fieldset {
+    display: flex;
+    column-gap: 16px;
+}
+
+body {
+    background-color: black;
+    font-family: Arial, sans-serif;
+    margin: 0;
+}
+#container {
+    display: flex;
+    flex-flow: column;
+    width: 1024px;
+}
+
+.deck, .target {
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    margin: 1px;
+    padding: 4px;
+    border: 1px solid #fff;
+    cursor: pointer;
+    text-align: center;
+}
+div.target {
+    width: 20%;
+    height: 256px;
+    flex-wrap: wrap;
+}
+div#targets {
+    height: 512px;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+}
+div.deck {
+    min-height: 70px;
+    display: flex;
+    flex-flow: row;
+}
+canvas {
+    position: absolute;
+    z-index: -1;
+    margin-top: 70px;
+}
+.row_target {
+    height: 256px;
+    width: 1024px;
+}
+.target.right {
+    flex-flow: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+.target.left {
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    flex-wrap: wrap;
 }
